<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2custom</name>
  <version>0.0.0</version>
  <description>
    Custom ROS 2 CLI command for the CATEC project.
  </description>
  <maintainer email="rmorales.ext@catec.aero">Roberto Morales</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2cli</depend>
  <depend>tabulate</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>